fix: add spacing between dl items when rendered without dividing lines (#1541)
* fix: add spacing between dl items when rendered without dividing lines

* fix: remove redundant margin property

--- a/src/components/Common/UI/DescriptionList/DescriptionList.module.scss
+++ b/src/components/Common/UI/DescriptionList/DescriptionList.module.scss
@@ -1,6 +1,10 @@
 .root {
   width: 100%;
 
+  .item:not(:last-child) {
+    margin-bottom: toRem(16);
+  }
+
   dt {
     font-weight: var(--g-fontWeightMedium);
     color: var(--g-colorBodyContent);
